service.yml
apiVersion: v1
kind: Service
metadata:
  name: christmas-apps-service
spec:
  selector:
    app: christmas-apps-front
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
