ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: christmas-apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: christmas-apps-service
      port:
        number: 80
  rules:
    - host: motoki.kubernetes.christmasapps
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: christmas-apps-service
            port:
              number: 80
